// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`09_reactmemo should work with recorded events 1`] = `
"
    <div id=\\"app\\"><ul><li>numRendered: 4<input type=\\"checkbox\\"><span style=\\"text-decoration: line-through;\\">Wash dishes</span></li><li>numRendered: 2<input type=\\"checkbox\\"><span style=\\"text-decoration: none;\\">Study JS</span></li><li>numRendered: 3<input type=\\"checkbox\\"><span style=\\"text-decoration: none;\\">Buy ticket</span></li></ul></div>
  <script type=\\"text/javascript\\" src=\\"main.js\\"></script>

"
`;

exports[`09_reactmemo should work with recorded events 2`] = `
"
    <div id=\\"app\\"><ul><li>numRendered: 4<input type=\\"checkbox\\"><span style=\\"text-decoration: line-through;\\">Wash dishes</span></li><li>numRendered: 5<input type=\\"checkbox\\"><span style=\\"text-decoration: line-through;\\">Study JS</span></li><li>numRendered: 3<input type=\\"checkbox\\"><span style=\\"text-decoration: none;\\">Buy ticket</span></li></ul></div>
  <script type=\\"text/javascript\\" src=\\"main.js\\"></script>

"
`;

exports[`09_reactmemo should work with recorded events 3`] = `
"
    <div id=\\"app\\"><ul><li>numRendered: 4<input type=\\"checkbox\\"><span style=\\"text-decoration: line-through;\\">Wash dishes</span></li><li>numRendered: 5<input type=\\"checkbox\\"><span style=\\"text-decoration: line-through;\\">Study JS</span></li><li>numRendered: 6<input type=\\"checkbox\\"><span style=\\"text-decoration: line-through;\\">Buy ticket</span></li></ul></div>
  <script type=\\"text/javascript\\" src=\\"main.js\\"></script>

"
`;

exports[`09_reactmemo should work with recorded events 4`] = `
"
    <div id=\\"app\\"><ul><li>numRendered: 7<input type=\\"checkbox\\"><span style=\\"text-decoration: none;\\">Wash dishes</span></li><li>numRendered: 5<input type=\\"checkbox\\"><span style=\\"text-decoration: line-through;\\">Study JS</span></li><li>numRendered: 6<input type=\\"checkbox\\"><span style=\\"text-decoration: line-through;\\">Buy ticket</span></li></ul></div>
  <script type=\\"text/javascript\\" src=\\"main.js\\"></script>

"
`;

exports[`09_reactmemo should work with recorded events 5`] = `
"
    <div id=\\"app\\"><ul><li>numRendered: 7<input type=\\"checkbox\\"><span style=\\"text-decoration: none;\\">Wash dishes</span></li><li>numRendered: 8<input type=\\"checkbox\\"><span style=\\"text-decoration: none;\\">Study JS</span></li><li>numRendered: 6<input type=\\"checkbox\\"><span style=\\"text-decoration: line-through;\\">Buy ticket</span></li></ul></div>
  <script type=\\"text/javascript\\" src=\\"main.js\\"></script>

"
`;

exports[`09_reactmemo should work with recorded events 6`] = `
"
    <div id=\\"app\\"><ul><li>numRendered: 7<input type=\\"checkbox\\"><span style=\\"text-decoration: none;\\">Wash dishes</span></li><li>numRendered: 8<input type=\\"checkbox\\"><span style=\\"text-decoration: none;\\">Study JS</span></li><li>numRendered: 9<input type=\\"checkbox\\"><span style=\\"text-decoration: none;\\">Buy ticket</span></li></ul></div>
  <script type=\\"text/javascript\\" src=\\"main.js\\"></script>

"
`;
